# goSkeleton

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
adapters/grpc/: BUILD.bazel  adapter.go  add_person.go  add_person_test.go  get_person.go  get_person_test.go
adapters/repository/person/: BUILD.bazel  people_in_memory.go  people_in_memory_test.go
adapters/rest/: BUILD.bazel  adapter.go  adapter_registry.go  add_person.go  add_person_test.go  get_person.go  get_person_test.go
app/: BUILD.bazel  init.go  init_grpc.go  init_rest.go  people_server_service.go
app/config/: config.go  viper_config.go
cmd/cliProject/: BUILD.bazel  main.go
cmd/cli_project/: BUILD.bazel  main.go
cmd/peopleServer/: BUILD.bazel  config.yml  main.go
cmd/people_server/: BUILD.bazel  config.yml  main.go
docs/: README.md
domain/: BUILD.bazel  person.go
internal/config/: BUILD.bazel  config.go  viper_config.go
internal/logging/: BUILD.bazel  logger.go  logrus_logger.go
proto/: BUILD.bazel  people.pb.go  people.proto
usecases/: BUILD.bazel  add_person.go  add_person_test.go  get_person.go  get_person_test.go  interface.go  repositories.go
usecases/mocks/: BUILD.bazel  mocks.go
