load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "adapter.go",
        "add_person.go",
        "get_person.go",
    ],
    importpath = "goSkeleton/adapters/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "//usecases:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    ],
)
