load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "adapter.go",
        "add_person.go",
        "get_person.go",
    ],
    importpath = "goSkeleton/adapters/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/logging:go_default_library",
        "//proto:go_default_library",
        "//usecases:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "add_person_test.go",
        "get_person_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//domain:go_default_library",
        "//internal/logging:go_default_library",
        "//proto:go_default_library",
        "//usecases/mocks:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
