load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "goSkeleton/cmd/cliProject",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/logging:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)

go_binary(
    name = "cliProject",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
