load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "goSkeleton/cmd/peopleServer",
    visibility = ["//visibility:private"],
    deps = ["//app:go_default_library"],
)

go_binary(
    name = "peopleServer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
