load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_push", "container_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "goSkeleton/cmd/people_server",
    visibility = ["//visibility:private"],
    deps = ["//app:go_default_library"],
)

go_binary(
    name = "people_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dev_config",
    srcs = ["config.yml"],
)

container_image(
    name = "image_dev",
    base = "@go_base//image",
    entrypoint = ["/go/bin/people_server"],
    directory = "/go/bin",
    files = [":people_server", ":dev_config"],
    ports = ["8080"]
)

container_image(
    name = "image",
    base = "@go_base//image",
    entrypoint = ["/go/bin/people_server"],
    directory = "/go/bin",
    files = [":people_server"],
    ports = ["8080"],
    env = {"PEOPLE_SERVER_SERVER_ADDRESS_IP": "0.0.0.0", "PEOPLE_SERVER_SERVER_ADDRESS_PORT": "8080", "PEOPLE_SERVER_SERVER_TIMEOUT_WRITE": "15", "PEOPLE_SERVER_SERVER_TIMEOUT_READ": "15", "PEOPLE_SERVER_SERVER_IDLE_READ": "60", "PEOPLE_SERVER_SERVER_ENDPOINTS": "[{}]"}
)
