load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_image_index")

platform(
    name = "oci_linux_amd64_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "goSkeleton/cmd/people_server",
    visibility = ["//visibility:private"],
    deps = ["//app:go_default_library"],
)

go_binary(
    name = "people_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dev_config",
    srcs = ["config.yml"],
)

pkg_tar(
    name = "people_server_tar",
    srcs = [":people_server"],
    package_dir = "/",
)

pkg_tar(
    name = "people_server_dev_tar",
    srcs = [":people_server", ":dev_config"],
    package_dir = "/",
)

oci_image(
    name = "image_dev",
    base = "@distroless_base",
    architecture = "amd64",
    os = "linux",
    tars = [":people_server_dev_tar"],
    entrypoint = ["/go/bin/people_server"],
    exposed_ports = [
        "8080/tcp",
    ],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    architecture = "amd64",
    os = "linux",
    tars = [":people_server_tar"],
    entrypoint = ["/go/bin/people_server"],
    env = {
        "PEOPLE_SERVER_REST_ADDRESS_IP": "0.0.0.0",
        "PEOPLE_SERVER_REST_ADDRESS_PORT": "8080",
        "PEOPLE_SERVER_REST_TIMEOUT_WRITE": "15",
        "PEOPLE_SERVER_REST_TIMEOUT_READ": "15",
        "PEOPLE_SERVER_REST_TIMEOUT_IDLE": "60",
        "PEOPLE_SERVER_REST_ENDPOINTS": "[{\"name\": \"GetPerson\", \"method\": \"GET\", \"path\": \"/person/{id}\", \"handler\": \"GetPerson\"},{\"name\": \"AddPerson\", \"method\": \"POST\", \"path\": \"/person\", \"handler\": \"AddPerson\"}]",
        "PEOPLE_SERVER_GRPC_PORT": "50051",
    },
    exposed_ports = [
        "8080/tcp",
    ],
)
