load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "viper_config.go",
    ],
    importpath = "goSkeleton/internal/config",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_spf13_viper//:go_default_library"],
)
