load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "viper_config.go",
    ],
    importpath = "goSkeleton/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_knadh_koanf_parsers_yaml//:go_default_library",
        "@com_github_knadh_koanf_providers_env//:go_default_library",
        "@com_github_knadh_koanf_providers_file//:go_default_library",
        "@com_github_knadh_koanf_v2//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
