load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "logger.go",
        "logrus_logger.go",
    ],
    importpath = "goSkeleton/internal/logging",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
    ],
)
