load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mocks.go"],
    importpath = "goSkeleton/usecases/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//domain:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
